--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 
 header {
   position: sticky;
-  top: -50px;
+  top: 0px;
   display: flex;
   justify-content: center;
 }
@@ -38,14 +38,15 @@ header .pembungkus-welcome {
   justify-content: center;
   align-items: center;
   backdrop-filter: blur(15px);
-  margin-top: 60px;
+  margin-top: 10%;
   width: 445px;
   height: 53px;
   overflow: hidden;
 }
 
 header .pembungkus-welcome .welcome {
-  font-size: 24px;
+  text-align: center;
+  font-size: 23px;
   color: #fff;
   font-weight: 700;
   letter-spacing: 1rem;
@@ -212,18 +213,18 @@ footer .kredit {
     justify-content: center;
     align-items: center;
     backdrop-filter: blur(15px);
-    margin-top: 60px;
+    margin-top: 5%;
     width: 90%;
     height: 50px;
     overflow: hidden;
   }
 
-  header .pembungkus-welcome .welcome {
+  /* header .pembungkus-welcome .welcome {
     font-size: 20px;
     color: #fff;
     font-weight: 700;
     letter-spacing: 1rem;
-  }
+  } */
 
   .container-2 {
     width: 100%;
